# RIG-Cluster

./: .dockerignore  .env-taskfile-local  .env-taskfile-odcn-production  .gitignore  .tool-versions  HOW.md  README.md  TODO.md  Taskfile.yaml  custom-kustomization.md  package-lock.json  taskfile-usage.md
operations-manager/python/: .env  .env.production  APPLICATION_LIFECYCLE.md  CONFIG.md  architecture_output.html  component-management.js  pyproject.toml
operations-manager/python/.claude/: settings.local.json
operations-manager/python/docs/: KEYCLOAK_SETUP.md
operations-manager/python/examples/: empty_repo_demo.py
operations-manager/python/functional_tests/: README.md  __init__.py  run_all.py  setup_test_infrastructure.py  test_argocd_application_creation.py
operations-manager/python/manifests/: allow-all-network-policy.yaml.jinja  argo-repository-https.yaml.jinja  argo-repository.yaml.jinja  argocd-application.yaml.jinja  argocd-appproject.yaml.jinja  decrypt-sops.yaml.jinja  deployment.yaml.jinja  generic-secret.yaml.to-sops.jinja  ingress.yaml.jinja  kustomization.yaml.jinja  namespace.yaml.jinja  pvc.yaml.jinja  service.yaml.jinja
operations-manager/python/opi/: __main__.py  server.py
operations-manager/python/opi/api/: auth_routes.py  endpoint_util.py  router.py
operations-manager/python/opi/bootstrap/: __init__.py  keycloak_setup.py
operations-manager/python/opi/connectors/: __init__.py  argo.py  git.py  keycloak.py  kubectl.py  minio_mc.py  postgres.py
operations-manager/python/opi/core/: auth_decorators.py  cluster_config.py  config.py  database_pool.py  database_pools.py  early_logging.py  git_monitor.py  keycloak_client_startup.py  simple_background.py  startup.py  task_manager.py  templates.py
operations-manager/python/opi/generation/: __init__.py  manifests.py
operations-manager/python/opi/handlers/: __init__.py  configuration_handler.py  project_file_handler.py  sops.py
operations-manager/python/opi/manager/: __init__.py  database_manager.py  keycloak_manager.py  minio_manager.py  project_manager.py
operations-manager/python/opi/middleware/: __init__.py  authorization.py
operations-manager/python/opi/services/: __init__.py  project_service.py  services.py  services_enums.py  user_service.py
operations-manager/python/opi/templates/: architecture-minimal.html.j2  architecture-overview.html.j2  base.html.j2  dashboard.html.j2  debug-menubar.html.j2  example.html.j2  formulier-template.html.j2  permission-denied.html.j2  project-creation-error.html.j2  project-creation-partial.html.j2  project-creation-success.html.j2  project-details.html.j2  project-progress.html.j2  projects-overview.html.j2  roos-form-improved.html.j2  roos-form.html.j2  self-service-portal.html.j2  services-overview.html.j2  test-debug-menubar.html.j2  test-gap-size.html  test-hero.html.j2  test-layout-size.html  (+3 more)
operations-manager/python/scripts/: setup_keycloak_client_scope.py
operations-manager/python/sources/: agekey.txt
operations-manager/python/tests/: create_robbert_realm.py  debug_component_generation.py  debug_exact_context.py  debug_extension.py  debug_layout.py  debug_menubar.py  debug_nested_layout.py  debug_parser.py  debug_placeholders.py  debug_preprocessing.py  debug_regex.py  debug_select_field.py  debug_templates.py  keycloak_sso_test.py  keycloak_test.py  test_action_group.py  test_actual_template.py  test_admin_check.py  test_age_password_decryption.py  test_architecture_direct.py  test_button_issue.py  test_button_variants.html  test_button_variants.py  test_clone_setup.py  test_colon_binding.py  test_complete_architecture.py  test_component_blocks.py  test_component_validation.py  test_components_output.html  test_components_section.py  test_connection_fix.py  test_connection_tracking.py  test_database_retry_recovery.py  test_db_manager_fix.py  test_debug_menubar.py  test_dependency_injection.py  test_deployment2_source.py  test_deployment3_credentials.py  test_deployment3_db.py  test_deployment_keycloak.py  (+36 more)
(+177 files in other folders)
